--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,18 @@
 ﻿# CMakeList.txt : CMake project for CMake_VS_Testing2, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.15)
 
-project ("CMake_VS_Testing2")
+project ("CMake_VS_Testing" VERSION 0.1.0)
+
+set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+find_package(Threads REQUIRED)
+
 
 # Add source to this project's executable.
-add_executable (CMake_VS_Testing2 "CMake_VS_Testing2.cpp" "CMake_VS_Testing2.h")
+add_subdirectory(hello)
+add_subdirectory(apps)
 
 # TODO: Add tests and install targets if needed.
-
 add_subdirectory(tests)
