Making "object" library statically linked and eliminating need to copy its files

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -9,23 +9,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(BUILD_SHARED_LIBS ON)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS True)
 
-add_library(${PROJECT_NAME} src/object.cpp)
+add_library(${PROJECT_NAME} STATIC src/object.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${MAIN_BINARY_DIR}")
 
 # PUBLIC needed to make both object.h and object library available elsewhere in project
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include)
-
-
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD 
-  COMMAND "${CMAKE_COMMAND}" -E copy_if_different
-     "$<TARGET_FILE:object>"
-     "../apps/$<TARGET_FILE_NAME:object>" 
-  COMMENT "Copying to apps directory")
-
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD 
-  COMMAND "${CMAKE_COMMAND}" -E copy_if_different 
-     "$<TARGET_FILE:object>"
-     "../tests/$<TARGET_FILE_NAME:object>" 
-  COMMENT "Copying to tests directory")
