Switching to top level PROJECT_NAME & VERSION

--- a/apps/main_config.h.in
+++ b/apps/main_config.h.in
@@ -3,11 +3,11 @@
 #ifndef INCLUDE_GUARD
 #define INCLUDE_GUARD
 
-#define PROJECT_NAME          "${PROJECT_NAME}"
-#define PROJECT_VERSION       "${PROJECT_VERSION}"
-#define PROJECT_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}"
-#define PROJECT_VERSION_MINOR "${PROJECT_VERSION_MINOR}"
-#define PROJECT_VERSION_PATCH "${PROJECT_VERSION_PATCH}"
-#define PROJECT_VERSION_TWEAK "${PROJECT_VERSION_TWEAK}"
+#define PROJECT_NAME          "${CMAKE_PROJECT_NAME}"
+#define PROJECT_VERSION       "${CMAKE_PROJECT_VERSION}"
+#define PROJECT_VERSION_MAJOR "${CMAKE_PROJECT_VERSION_MAJOR}"
+#define PROJECT_VERSION_MINOR "${CMAKE_PROJECT_VERSION_MINOR}"
+#define PROJECT_VERSION_PATCH "${CMAKE_PROJECT_VERSION_PATCH}"
+#define PROJECT_VERSION_TWEAK "${CMAKE_PROJECT_VERSION_TWEAK}"
 
 #endif // INCLUDE_GUARD
