--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,7 +5,7 @@ include(CTest)
 
 enable_testing()
 
-project(main VERSION 0.1.2.3)
+project(main)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
